--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
   </head>
   <body>
-        <h1>Learn Enoughのあらまし</h1>
+    <h1>Learn Enoughのあらまし</h1>
+    <p>
+      『Learn Enough to Be Dangerous』は、技術の成熟（technical sophistication）を世に広める
+      運動のリーダーです。技術の成熟とは、コマンドを魔法のように操ってコンピュータを自在に使いこなす
+      スキルのことです。技術の成熟には、コマンドライン、コーディング、キーボードショートカットの推測、
+      エラーメッセージのググり方、行き詰まったら再起動すべきかどうかの判断など、あらゆるスキルが含まれ
+      ます。技術の成熟を身につければ、全世界で少なくとも10億人が計り知れない恩恵を受けられると私たちは
+      確信しています。この運動に参加したい方は、今すぐ公式メーリングリストにサインアップいただけます。
+    </p>
+    .
 
-    <h2>創立までの流れ</h2>
-
-    <h2>創立メンバー</h2>
-
-    <h3>マイケル・ハートル</h3>
-
-    <h3>リー・ドナヒュー</h3>
-
-    <h3>ニック・メルウィン</h3>gi
   </body>
 </html>
