--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       運動のリーダーです。技術の成熟とは、コマンドを魔法のように操ってコンピュータを自在に使いこなす
       スキルのことです。技術の成熟には、コマンドライン、コーディング、キーボードショートカットの推測、
       エラーメッセージのググり方、行き詰まったら再起動すべきかどうかの判断など、あらゆるスキルが含まれ
-      ます。技術の成熟を身につければ、全世界で少なくとも<strong>10億人</strong>が計り知れない恩恵を受けられると私たちは確信しています。この運動に参加したい方は、今すぐ公式メーリングリストにサインアップいただけます。
+      ます。技術の成熟を身につければ、全世界で少なくとも<strong>10億人</strong>が計り知れない恩恵を受けられると私たちは確信しています。この運動に参加したい方は、今すぐ<a href="https://learnenough.com/email">
+      公式メーリングリストにサインアップいただけます</a>。
     </p>
 
     <h2>創立までの流れ</h2>
