--- a/index.html
+++ b/index.html
@@ -60,36 +60,47 @@
       </p>
 
       <p>
-      マイケルのTwitterフォローをお願いします:
-      <a href="https://twitter.com/mhartl">ここをクリック</a>。
+        マイケルのTwitterフォローをお願いします:
+        <a href="https://twitter.com/mhartl">ここをクリック</a>。
       </p>
 
     <h3>リー・ドナヒュー</h3>
-    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
-    alt="リー・ドナヒュー">
+      <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+      alt="リー・ドナヒュー">
       <p>
-      文字どおりサメと泳ぎを競ったりスノボに乗ってパウダースタッシュパンツ狩りをしてないときのリーは、
-      コンピュータの前に座ってインターフェイスをデザインしたりフロントエンド開発を手掛けたり、Learn
-      Enoughチュートリアルのインターフェイス関連部分を執筆しています。
-    </p>
+        文字どおりサメと泳ぎを競ったりスノボに乗ってパウダースタッシュパンツ狩りをしてないときのリーは、
+        コンピュータの前に座ってインターフェイスをデザインしたりフロントエンド開発を手掛けたり、Learn
+        Enoughチュートリアルのインターフェイス関連部分を執筆しています。
+      </p>
 
-    <p>
-      リーのTwitterフォローをお願いします:
-      <a href="https://twitter.com/leedonahoe">ここをクリック</a>。
-    </p>
+      <p>
+        リーのTwitterフォローをお願いします:
+        <a href="https://twitter.com/leedonahoe">ここをクリック</a>。
+      </p>
 
     <h3>ニック・メルウィン</h3>
     <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
     alt="ニック・メルウィン">
-    <p>
-      ジミー・キンメル、コナン、エレン・ショーなどで開催されたキャピタル・シティーズのライブでニックの
-      超絶速弾きギターをご覧になった方もいらっしゃるかもしれませんが、ニックは骨の髄までナードですので
-      どうかご安心を。ツアーバスの中でコードをかき鳴らすのが楽しいのと同じぐらい、自宅のキッチンで美しい
-      コードを書きまくると楽しくなります。
-    </p>
+      <p>
+        ジミー・キンメル、コナン、エレン・ショーなどで開催されたキャピタル・シティーズのライブでニックの
+        超絶速弾きギターをご覧になった方もいらっしゃるかもしれませんが、ニックは骨の髄までナードですので
+        どうかご安心を。ツアーバスの中でコードをかき鳴らすのが楽しいのと同じぐらい、自宅のキッチンで美しい
+        コードを書きまくると楽しくなります。
+      </p>
 
-    <p>
-      ニックのTwitterフォローをお願いします:
-      <a href="https://twitter.com/nickmelvin">ここをクリック</a>。
+      <p>
+        ニックのTwitterフォローをお願いします:
+        <a href="https://twitter.com/nickmelvin">ここをクリック</a>
+        公式メーリングリストにサインアップをお願いします
+      </p>。
+      <p>
+      <a href="https://twitter.com/RailsTutorialJP" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src="置き換える">
+      </a>
+      RailsチュートリアルのTwitterフォローをお願いします:
+      <a href="https://twitter.com/RailsTutorialJP"
+        target="_blank" rel="noopener">ここをクリック</a>。
+      </p>
   </body>
 </html>
