--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p>
       <a href="https://twitter.com/RailsTutorialJP" target="_blank"
       rel="noopener" style="text-decoration: none;">
-        <img src="置き換える">
+        <img src="https://abs.twimg.com/favicons/twitter.2.ico" alt="Twitterロゴ">
       </a>
       RailsチュートリアルのTwitterフォローをお願いします:
       <a href="https://twitter.com/RailsTutorialJP"
