--- a/tags.html
+++ b/tags.html
@@ -73,6 +73,21 @@
         <td>区分</td>
         <td>セクションを区分するために使用する</td>
       </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>リスト項目</td>
+        <td>番号割り当て</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>リスト項目</td>
+        <td>順序なし</td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>リスト</td>
+        <td>黒丸で表示</td>
+      </tr>
       </tr>
     </table>
 
