--- a/moby_dick.html
+++ b/moby_dick.html
@@ -7,10 +7,15 @@
 <body>
 
     <!-- スタイルをもっと追加すること（最後のセクションで行う予定） -->
-    <header>
+<header>
+    <div>
+        <a href="index.html">homeページ</a>
+        <a href="tags.html">HTMLタグ一覧</a>
+        <a href="moby_dick.html">読書案内『Moby Dick』</a>
+    </div>
 <h1>Softcover読書案内</h1>
 <h2>Moby-Dick（白鯨）</h2>
-    </header>
+</header>
 
     <div>
 <p>
