--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <title>Railsチュートリアル「HTML編」</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div>
-      <a href="index.html">homeページ</a>
-      <a href="moby_dick.html">読書案内『Moby Dick』</a>
-      <a href="tags.html">HTMLタグ一覧</a>
+    <div class="nav-menu">
+      <a href="index.html" style="text-decoration: none;">homeページ</a>
+      <a href="moby_dick.html"class="nave-spacing" style="text-decoration: none;">読書案内『Moby Dick』</a>
+      <a href="tags.html" class="nave-spacing" style="text-decoration: none;">HTMLタグ一覧</a>
     </div>
 
     <h1>Learn Enoughのあらまし</h1>
@@ -33,6 +34,18 @@
       <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
         <img src="images/kitten.jpg" alt="愛くるしい子猫" >
       </a>
+      <TAG style="display: block; font-weight: bold; font-size: 26px;">名言</TAG>
+    <p>
+      本Webサイトでは、世界中から集めた多くの猫ちゃん動画のほかに、さまざまな名言もふんだんに掲載されています（おそらくここまでやったサイトはないでしょう）。
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #fafafa;">
+      <p>
+        <em>インターネット上で見つけた名言をうのみにしてはならない。</em>
+        <br>
+        —エイブラハム・リンカーン（Abraham Lincoln）
+      </p>
+    </blockquote>
 
 
     <h2>創立までの流れ</h2>
