Refactor inline styles into a stylesheet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="nav-menu">
+    <div id="nain=nav" class="nav-menu">
       <a href="index.html" style="text-decoration: none;">homeページ</a>
       <a href="moby_dick.html"class="nave-spacing" style="text-decoration: none;">読書案内『Moby Dick』</a>
       <a href="tags.html" class="nave-spacing" style="text-decoration: none;">HTMLタグ一覧</a>
